<resources>
    <string name="app_name">AndroidApp</string>

    <string name="metric">Metric</string>
    <string name="default_unit">@string/metric</string>

    <string name="weight_metric">Weight</string>
    <string name="height_metric">Height</string>

    <string name="age">Age</string>

    <string name="more_information">More information on Wikipedia</string>
    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>
    <string name="bmi_category_v_serv_underweight">Very severely underweight</string>
    <string name="bmi_category_serv_underweight">Severely underweight</string>
    <string name="bmi_category_underweight">Underweight</string>
    <string name="bmi_category_normal">Normal (healthy weight)</string>
    <string name="bmi_category_overweight">Overweight</string>
    <string name="bmi_category_obese1">Obese Class I (Moderately obese)</string>
    <string name="bmi_category_obese2">Obese Class II (Severely obese)</string>
    <string name="bmi_category_obese3">Obese Class III (Very severely obese)</string>
    <string name="bmi_category_obese4">Obese Class IV (Morbidly Obese)</string>
    <string name="bmi_category_obese5">Obese Class V (Super Obese)</string>
    <string name="bmi_category_obese6">Obese Class VI (Hyper Obese)</string>

    <string name="bmi_male">Male</string>
    <string name="bmi_female">Female</string>

    <string name="bmi_default_height">180</string>
    <string name="bmi_default_weight">80</string>
    <string name="bmi_default_age">32</string>

    <string name="bmi_height_unit">cm</string>
    <string name="bmi_weight_unit">kg</string>

    <string name="bmi_action_calculate">Calculate your BMI</string>

    <string name="bmi_result_bmi">BMI: </string>
    <string name="bmi_result_gender">Gender: </string>
    <string name="bmi_result_category">Category: </string>

    <string name="action_about">About</string>
    <string name="author">Author</string>
    <string name="help_translating_this_app">Help translating this app!</string>
    <string name="rate_in_play_store">Rate in Play Store</string>
    <string name="share_with_friends">Share with your friends</string>
    <string name="check_out">Hey, check out this app: %s\n%s</string>
    <string name="legal">Legal</string>
    <string name="license">License</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="bmi_calc_menu">BMI Calculator</string>

    <string name="donation_menu">Donation</string>
    <string name="submit_donate_btn">DONATE HERE!</string>

    <string name="privacy_policy_content"><![CDATA[
        Privacy Policy

        Thank you for using this BMI Calculator app. Your privacy is important, and this policy explains how data is handled. \n\n

        1. Google Play Services\n
           - If you install this app via Google Play, Google may collect certain device and usage data, which is visible to me through the Google Play Console.\n
           - In case of a crash, some information may be automatically uploaded to Google.\n
           - I have no control over this data collection. Please review https://policies.google.com/privacy for details.\n\n

        2. F-Droid Installations\n
           - If you install this app via F-Droid, I do not receive any usage or crash data.\n
           - Please refer to https://f-droid.org/en/about/ for details on their data handling.\n\n

        3. Auto Backup by Google\n
           - If your device has **Auto Backup by Google** enabled, your selected system of units (metric/imperial) may be backed up to Google Drive.\n
           - More details can be found here: https://developer.android.com/guide/topics/data/autobackup.\n\n

        4. External Links\n
           - If you click on a link in the About screen, the website you visit may collect data about your device.\n
           - Please review the privacy policy of the respective website for details.\n\n

        No personal data is collected, stored, or shared by this app beyond what is mentioned above.\n\n
    ]]></string>
</resources>