<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bmi_result_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
>
    <ImageView
        android:id="@+id/bmi_result_icon_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bmi_result_content_wrapper"
        android:padding="10dp"
    />

    <RelativeLayout
        android:id="@+id/bmi_result_content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:background="@drawable/bmi_selection_bg"
    >
        <RelativeLayout
            android:id="@+id/bmi_result_vertical_line"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bmi_result_bmi_view"
            android:layout_toStartOf="@id/bmi_result_bmi_view"
            android:layout_marginEnd="5dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:text="@string/bmi_result_bmi"
        />
        <TextView
            android:id="@+id/bmi_result_bmi_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/bmi_result_vertical_line"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bmi_result_category_view"
            android:layout_toStartOf="@id/bmi_result_category_view"
            android:layout_marginEnd="5dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:text="@string/bmi_result_category"
        />
        <TextView
            android:id="@+id/bmi_result_category_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmi_result_bmi_view"
            android:layout_alignStart="@id/bmi_result_vertical_line"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
        />

        <TextView
            android:id="@+id/bmi_result_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bmi_result_gender_view"
            android:layout_toStartOf="@id/bmi_result_gender_view"
            android:layout_marginEnd="5dp"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:text="@string/bmi_result_gender"
        />
        <TextView
            android:id="@+id/bmi_result_gender_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmi_result_category_view"
            android:layout_alignStart="@id/bmi_result_vertical_line"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
        />
    </RelativeLayout>
</RelativeLayout>